Don't handle the tab press event in the window cycle event filter.

Because fullscreen windows are allowed to handle alt+tab, we have to be careful
not to handle the tab press event in the window cycle event filter as it will
be treated as a fullscreen window preventing alt-tabbing.

BUG=622396
TEST=WindowCycleControllerTest.TabPastFullscreenWindow,WindowCycleControllerTest.TabKeyNotLeaked

Review-Url: https://codereview.chromium.org/2252673002
Cr-Commit-Position: refs/heads/master@{#412616}

Former-commit-id: 66b4142cfaf0acc038f220b6288089f8a60b923d